--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -57,7 +57,7 @@
     >
 
         <LinearLayout
-                android:id="@+id/emailPasswordFields"
+                android:id="@+id/emailPasswordAdminFields"
                 android:layout_width="match_parent"
                 android:layout_height="211dp"
                 android:orientation="vertical"
@@ -91,7 +91,7 @@
                 android:id="@+id/emailPasswordButtons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/emailPasswordFields"
+                android:layout_below="@+id/emailPasswordAdminFields"
                 android:orientation="horizontal"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp">
